--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\HOST\\.virtualenvs\\collar_client-rOqojr5O\\Scripts\\python.exe"
+    "python.pythonPath": ".venv/bin/python"
 }
